Nav z-index fix, war unterhalb der line-icons

--- a/static/css/nav.css
+++ b/static/css/nav.css
@@ -133,7 +133,8 @@
     top: 0;
     left: 0;
     width: 100vw;
-    flex-direction: column;    
+    flex-direction: column;
+    z-index: 99;
   }
   /* .topnav.responsive a.icon {
     position: absolute;
